--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://gitlab.com/gaushao"
   },
   "scripts": {
+    "start": "react-scripts start",
     "docs": "typedoc",
     "docsmd": "typedoc --plugin typedoc-plugin-markdown --out docs",
     "devdocs": "typedoc --watch ."
@@ -16,12 +17,30 @@
   "dependencies": {
     "d3": "^7.0.0",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
     "@types/d3-geo": "^3.0.2",
-    "@types/topojson-client": "^3.1.1"
+    "@types/lodash": "^4.14.191",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.10",
+    "@types/topojson-client": "^3.1.1",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
