--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "d3-react-globe",
-  "version": "0.0.1",
+  "name": "@jaymesantos/d3-react-globe",
+  "version": "0.0.5",
   "description": "D3 svg globe rendered by ReactJS loaded from geojson/topojson",
   "homepage": "https://gaushao.github.io/d3-react-globe",
   "author": {
