--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/topojson-client": "^3.1.1",
     "gh-pages": "^5.0.0",
     "react-scripts": "^5.0.1",
+    "typedoc": "^0.23.25",
     "typescript": "^4.9.5"
   },
   "browserslist": {
