--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jaymesantos/d3-react-globe",
-  "version": "0.0.5",
+  "name": "d3-react-globe",
+  "version": "0.0.7",
   "description": "D3 svg globe rendered by ReactJS loaded from geojson/topojson",
   "homepage": "https://gaushao.github.io/d3-react-globe",
   "author": {
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "prepare": "npx tsc --build src/components/",
+    "prepare": "tsc --build src/components/",
     "publish": "./publish/.sh",
     "docs": "typedoc",
     "docsmd": "typedoc --plugin typedoc-plugin-markdown --out docs",
@@ -33,6 +33,8 @@
     "@types/topojson-client": "^3.1.1",
     "gh-pages": "^5.0.0",
     "react-scripts": "^5.0.1",
+    "tsc-esm": "^1.0.4",
+    "tsc-esm-fix": "^2.20.12",
     "typedoc": "^0.23.25",
     "typescript": "^4.9.5"
   },
