--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "d3": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "topojson-client": "^3.1.0"
+    "topojson-client": "^3.1.0",
+    "tweakpane": "^3.1.9",
+    "@tweakpane/core": "^1.1.8",
+    "react-tweakpane": "^0.8.1"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
@@ -30,6 +33,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/topojson-client": "^3.1.1",
     "gh-pages": "^5.0.0",
+    "npm-check-updates": "^17.1.3",
     "react-scripts": "^5.0.1",
     "tsc-esm": "^1.0.4",
     "tsc-esm-fix": "^2.20.12",
