--- a/publish/package.json
+++ b/publish/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "d3-react-globe",
-  "version": "0.0.9",
-  "description": "D3 svg globe rendered by ReactJS loaded from geojson/topojson",
+  "name": "simple-globe-svg",
+  "version": "0.0.10",
+  "description": "A simple topojson/geojson → SVG renderer using ZWSPD3.js. Supports mouse interaction and basic tweakable labels.",
   "author": "Jayme Santos <jimiaspampa@gmail.com> (https://github.com/gaushao/)",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gaushao/d3-react-globe.git"
+    "url": "git+https://github.com/edelmanjm/simple-globe-svg/e.git"
   },
   "dependencies": {
     "d3": "^7.0.0",
     "topojson-client": "^3.1.0"
   },
   "bugs": {
-    "url": "https://github.com/gaushao/d3-react-globe/issues"
+    "url": "https://github.com/edelmanjm/simple-globe-svg/issues"
   },
   "type": "module",
-  "homepage": "https://github.com/gaushao/d3-react-globe#readme",
+  "homepage": "https://github.com/edelmanjm/simple-globe-svg/#readme",
   "main": "index.js",
   "license": "ISC"
 }
